--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 name: Pokemon Field Studies
 markdown: kramdown
-permalink: /blog/:year/:month/:day/:title
+permalink: Pokemon_FieldStudies//blog/:year/:month/:day/:title
