readded/ in baseurl

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 name: Pokemon Field Studies
 markdown: kramdown
 permalink: blog/:year/:month/:day/:title
-baseurl: Pokemon_FieldStudies
+baseurl: /Pokemon_FieldStudies
