included kramdown options

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,8 @@
 name: Pokemon Field Studies
-markdown: kramdown:
-  input: GFM
+markdown: kramdown
 permalink: blog/:year/:month/:day/:title
 highlighter: rouge
+
+kramdown:
+  input: GFM
+  syntax_highlighter: rouge
